Added grilledgarlicbread.html and link to it in index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1> Odin Recipes </h1>
+
+        <p><a href="recipes/grilledgarlicbread.html"> Grilled Garlic Bread</a></p>
     </body>
 </html>
