Added content to grilledgarlicbread.html
Added a picture and alt text. Unordered list for ingredients, ordered list for directions, and nutrition facts.

--- a/recipes/grilledgarlicbread.html
+++ b/recipes/grilledgarlicbread.html
@@ -9,6 +9,32 @@
     <body>
         <h1>Grilled Garlic Bread</h1>
 
+        <img src="https://images.food52.com/7WTd-9vaDegm8tj099h23fFPYKw=/1200x1200/9355deea-f1f4-4506-a477-1e06d2abcfd5--2web.jpg" 
+        alt="grilled garlic bread in a basket">
+        <h3>Nutrition Facts</h3>
+        <p>Per Serving: 145 calories; fat 7g; cholesterol 17.5mg; sodium 263.8mg; carbohydrates 16.4g; protein 4.4g. </p>
+
+        <h3>Ingredients</h3>
+            <ul>
+                <li>2 tablespoons butter, softened</li>
+                <li>1 clove garlic, crushed</li>
+                <li>2 tablespoons grated Parmesan cheese</li>
+                <li>ground black pepper to taste</li>
+                <li>¼ large baguette, sliced</li>
+                <li>1 teaspoon chopped fresh parsley, or to taste</li>
+            </ul>
+
+        <h3>Steps</h3>
+            <ol>
+                <li>Preheat a grill to high heat.</li>
+                <li>Mix together butter, garlic, Parmesan cheese, and pepper in a bowl.</li>
+                <li>Spread the butter mixture generously on the baguette slices.</li>
+                <li>Place slices on the preheated grill and cook until butter is melted and bread is lightly brown, about 30 seconds.</li>
+                <li>Sprinkle with parsley and serve immediately.</li>
+
+
+            </ol>
+
     </body>
 
 </html>
