--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1> Odin Recipes </h1>
 
         <p><a href="recipes/grilledgarlicbread.html"> Grilled Garlic Bread</a></p>
+        <p><a href="recipes/poblanogroundporktacos.html">Poblano and Ground Pork Tacos</a></p>
     </body>
 </html>
