Added chefjohnscarrotcake.html and link in index.html
created chefjohnscarrotcake.html, added content and link back to index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 
         <p><a href="recipes/grilledgarlicbread.html"> Grilled Garlic Bread</a></p>
         <p><a href="recipes/poblanogroundporktacos.html">Poblano and Ground Pork Tacos</a></p>
+        <p><a href="recipes/chefjohnscarrotcake.html">Chef John's Carrot Cake</a></p>
     </body>
 </html>
