--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head> 
         <meta charset= "utf-8">
+        <link rel="stylesheet" href="css/style.css">
         <title> Odin Recipes </title>
     </head>
     <body>
         <h1> Odin Recipes </h1>
 
-        <p><a href="recipes/grilledgarlicbread.html"> Grilled Garlic Bread</a></p>
-        <p><a href="recipes/poblanogroundporktacos.html">Poblano and Ground Pork Tacos</a></p>
-        <p><a href="recipes/chefjohnscarrotcake.html">Chef John's Carrot Cake</a></p>
+        <p><a class="link main" href="recipes/grilledgarlicbread.html"> Grilled Garlic Bread</a></p>
+        <p><a class="link main" href="recipes/poblanogroundporktacos.html">Poblano and Ground Pork Tacos</a></p>
+        <p><a class="link main" href="recipes/chefjohnscarrotcake.html">Chef John's Carrot Cake</a></p>
     </body>
 </html>
