--- a/recipes/grilledgarlicbread.html
+++ b/recipes/grilledgarlicbread.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/style.css">
         <title>Grilled Garlic Bread</title>
 
 
@@ -12,7 +13,7 @@
         <img src="https://images.food52.com/7WTd-9vaDegm8tj099h23fFPYKw=/1200x1200/9355deea-f1f4-4506-a477-1e06d2abcfd5--2web.jpg" 
         alt="grilled garlic bread in a basket">
         <h3>Nutrition Facts</h3>
-        <p>Per Serving: 145 calories; fat 7g; cholesterol 17.5mg; sodium 263.8mg; carbohydrates 16.4g; protein 4.4g. </p>
+        <p class="nutrition">Per Serving: 145 calories; fat 7g; cholesterol 17.5mg; sodium 263.8mg; carbohydrates 16.4g; protein 4.4g. </p>
 
         <h3>Ingredients</h3>
             <ul>
@@ -35,7 +36,7 @@
 
             </ol>
 
-        <p><a href="../index.html"> Home</a></p>
+            <p><a class="link home" href="../index.html"> Home</a></p>
     </body>
 
 </html>
