--- a/recipes/poblanogroundporktacos.html
+++ b/recipes/poblanogroundporktacos.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/style.css">
         <title>Poblano and Ground Pork Tacos</title>
     </head>
     <body>
@@ -9,7 +10,7 @@
         <img src="https://4.bp.blogspot.com/-d9eWOqQhpM4/XCvQG0O4PYI/AAAAAAAACZY/RxwA-MxeR50b70VXlX_koCku-DXSTUb2QCEwYBhgL/s1600/IMG_6615.jpg" 
         alt="Poblano and Ground Pork Tacos on a plate">
         <h3>Nutrition Facts</h3>
-        <p>Per Serving: 392 calories; protein 15.4g; carbohydrates 44.5g; fat 16.8g; cholesterol 34.8mg; sodium 659.7mg.</p>
+        <p class="nutrition">Per Serving: 392 calories; protein 15.4g; carbohydrates 44.5g; fat 16.8g; cholesterol 34.8mg; sodium 659.7mg.</p>
 
         <h3>Ingredients</h3>
             <ul>
@@ -49,7 +50,7 @@
 
 
 
-    <p><a href="../index.html"> Home</a></p>
+            <p><a class="link home" href="../index.html"> Home</a></p>
     </body>
 
 
