Edited css and added text to index.html
Played around with position:sticky and position:relative on index.html and added more text to index.html to enable scrolling.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     </head>
     <body>
         <h1> Odin Recipes </h1>
+        <h3 class="sticky">Introduction</h3>
+        <p class="blockone">This is a project for the Odin Project Foundations course.
+        I'm slowly adding to it over time.
+        Not for any real reason.
+        I finished the project several steps ago, but I'm just trying to improve it over time.
+        Maybe something comes from the idea of building upon an early work.
+        It's possible, but also maybe not.
+        I'm not really one to say what will or won't work
+        Truth be told, i'm kind of just putting this text here to have more things to move around on this page.
+        Happens to the best of us lol. Currently, I am trying to fill up this space to text out the position:sticky
+        function on the Introduction Header, so I need enough text to make it scroll. Alternatively, I guess I could
+        increase font size for no reason. Actually, that sounds ridiculous, so I'm in.
+        </p>
 
         <p><a class="link main" href="recipes/grilledgarlicbread.html"> Grilled Garlic Bread</a></p>
         <p><a class="link main" href="recipes/poblanogroundporktacos.html">Poblano and Ground Pork Tacos</a></p>
